Fix horizontal scroll
Changed back the overflow:hidden so there is no horizontal scroll. Have
to find a better way because ppl will still complain that when they put
too much text buttons are not clickable

--- a/newstyles.css
+++ b/newstyles.css
@@ -300,7 +300,7 @@ body.home div.p3 {
 margin:0 auto;
 width:980px;
 position:relative;
-
+overflow:hidden;
 }
 #scroller #scroller-content {
 width:10000px;
